# prawobiorca-backend

./: .dockerignore  .env.example  .gitignore  Containerfile  README.md  main.py  mkdocs.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 00908e6dc681_initial.py  4575cca275e4_initial.py
app/: config.py  main.py
app/api/: router.py
app/api/endpoints/: account.py  accounts.py  files.py  health.py  user_files.py
app/application/dtos/: account.py
app/application/use_cases/: account.py  auth.py  user_files.py
app/cloud_storage/: connection.py  utils.py
app/core/: authentication.py  consts.py  enums.py  exceptions.py  logging_config.py  security.py
app/dependencies/: authentication.py  file_storage.py  key_value_repository.py  units_of_work.py
app/domain/entities/: tokens.py
app/domain/interfaces/: file_storage.py  key_value_db.py  unit_of_work.py
app/domain/models/: account.py
app/domain/services/: accounts.py  security.py  tokens.py  user_files.py
app/framework/api/: router.py
app/framework/api/endpoints/: accounts.py  auth.py  health.py  (+1 more)
app/framework/dependencies/: accounts.py  authentication.py  file_storage.py  key_value_repository.py  user_files.py
app/framework/models/: account.py  auth.py
app/infrastructure/: enums.py  vector_db.py
app/infrastructure/cloud_storage/: connection.py  utils.py
app/infrastructure/file_storage/: connection.py  repository.py
app/infrastructure/key_value_db/: connection.py  redis_db.py  repository.py
app/infrastructure/relational_db/: bases.py  connection.py
app/infrastructure/utilities/: security.py
app/infrastructure/vector_db/: connection.py  qdrant_db.py
app/key_value_db/: connection.py
app/models/: account.py  token.py
app/relational_db/: connection.py
app/repositories/: general.py  users.py
app/schemas/: mixins.py  users.py
app/services/: accounts.py  user_files.py
app/settings/: application.py  cloud_storage.py  file_storage.py  key_value_database.py  relational_database.py  vector_database.py
app/shared/: config.py  consts.py  enums.py  exceptions.py  logging_config.py
app/shared/settings/: application.py  file_storage.py  key_value_database.py  relational_database.py  vector_database.py
app/units_of_work/: base.py  users.py
app/vector_db/: connection.py
bash/: before_commit.sh  build_image.sh  granian_run.sh  podman_pod.sh  postgres_container_run.sh  run_integration_tests.sh
docs/: business_logic.md  index.md  tests.md  workflow.md
docs/architecture/: architecture.md  coding_rules.md  external_services.md  libraries.md
docs/tests/: fixtures.md  integration_fixtures.md
tests/: conftest.py  test_consts.py
tests/integration/: account_test.py  conftest.py  test_account.py
tests/unit/: consts.py
tests/unit/endpoints/: accounts.py  accounts_test.py  conftest.py  user_files_test.py
tests/unit/input_validation/: conftest.py  test_accounts.py  test_auth.py  test_user_files.py
tests/unit/services/: account_test.py  conftest.py  file_test.py  test_account.py
tests/unit/use_cases/: test_account.py  test_auth.py  test_user_files.py
(+5 files in other folders)
