[project]
name = "prawobiorca-backend"
version = "0.14.2"
description = "Backend for law acts search engine with AI features."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg==0.30.*",
    "bcrypt==4.3.*",
    "fastapi==0.115.*",
    "google-cloud-storage==3.1.*",
    "granian==2.2.*",
    "pydantic-settings==2.9.*",
    "python-multipart==0.0.20",
    "qdrant-client==1.14.*",
    "redis==6.2.*",
    "sqlalchemy[asyncio]==2.0.*",
]

[project.optional-dependencies]
dev = [
    "bandit==1.8.*",
    "granian[reload]==2.2.*",
    "pytest==8.3.*",
    "pytest-asyncio==1.0.*",
    "uvicorn==0.34.*",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
