[project]
name = "prawobiorca-backend"
version = "0.27.0"
description = "Backend for law acts search engine with AI features."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg==0.31.*",
    "bcrypt==5.0.*",
    "email-validator==2.3.*",
    "fastapi==0.128.*",
    "google-cloud-storage==3.8.*",
    "granian==2.6.*",
    "pydantic-settings==2.12.*",
    "python-multipart==0.0.21",
    "qdrant-client==1.16.*",
    "redis==7.1.*",
    "sqlalchemy[asyncio]==2.0.*",
]

[project.optional-dependencies]
dev = [
    "alembic==1.18.*",
    "bandit==1.9.*",
    "black==26.1.*",
    "granian[reload]==2.6.*",
    "isort==7.0.*",
    "mkdocs==1.6.*",
    "mkdocs-material==9.7.*",
    "mkdocstrings[python]==1.0.*",
    "psycopg==3.3.*",
    "pytest==9.0.*",
    "pytest-asyncio==1.3.*",
    "testcontainers[postgres,redis]==4.14.*",
    "uvicorn==0.40.*",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"

[tool.black]
line-length = 120
target-version = ["py313"]
exclude = '''
/(
    \.git
  | \.venv
  | config
  | secrets
  | bash
  | alembic
)/
'''

[tool.isort]
skip = ["alembic", ".venv"]
